Created stub for SendSmsCode request
