# docs/swagger.json
@@ -35,7 +35,7 @@
                     "200": {
                         "description": "Successfully generated token",
                         "schema": {
-                            "$ref": "#/definitions/dtos.GenerateTokenResponse"
+                            "$ref": "#/definitions/dtos.TokenResponse"
                         }
                     },
                     "400": {
@@ -94,6 +94,48 @@
                     }
                 }
             }
+        },
+        "/api/v1/auth/send-sms-code": {
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Authentication"
+                ],
+                "summary": "Sending sms-code to user to phone number he entered",
+                "parameters": [
+                    {
+                        "description": "Dto with phone number",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/dtos.SendSmsCodeRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successfully sent code"
+                    },
+                    "400": {
+                        "description": "Invalid phone number",
+                        "schema": {
+                            "$ref": "#/definitions/dtos.ErrorDto"
+                        }
+                    },
+                    "500": {
+                        "description": "Happened internal error",
+                        "schema": {
+                            "$ref": "#/definitions/dtos.ErrorDto"
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
@@ -113,14 +155,6 @@
                 }
             }
         },
-        "dtos.GenerateTokenResponse": {
-            "type": "object",
-            "properties": {
-                "token": {
-                    "type": "string"
-                }
-            }
-        },
         "dtos.RegisterRequest": {
             "type": "object",
             "properties": {
@@ -128,6 +162,22 @@
                     "type": "string"
                 },
                 "role": {
+                    "type": "string"
+                }
+            }
+        },
+        "dtos.SendSmsCodeRequest": {
+            "type": "object",
+            "properties": {
+                "phone_number": {
+                    "type": "string"
+                }
+            }
+        },
+        "dtos.TokenResponse": {
+            "type": "object",
+            "properties": {
+                "token": {
                     "type": "string"
                 }
             }
